...
    static private(set) var gotAuthCode: Bool = false
    
    private let enterButton: UIButton = {
        
        let button = UIButton()
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 18.0)
        button.setTitle("Войти", for: .normal)
        button.setTitleColor(UIColor(named: ColorNames.ypBlack), for: .normal)
        button.layer.cornerRadius = 16.0
        button.layer.masksToBounds = true
        button.backgroundColor = UIColor(named: ColorNames.ypWhite)
        button.accessibilityIdentifier = "AuthButton"
        
        return button
    }()
    
    private let unsplashLogo: UIImageView = {
        
...
