...
        label.textColor = UIColor(named: ColorNames.ypWhite)
        return label
    }()
    
    let likeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.accessibilityIdentifier = "LikeButton"
        return button
    }()
    
    weak var delegate: ImagesListCellDelegate?
    
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
...
