...

final class ProfileViewController: UIViewController, ProfileViewControllerProtocol {
    
    var presenter: ProfilePresenterProtocol = ProfilePresenter()
    
    private let exitButton: UIButton = {
        let exitButtonImage = "ExitButton"
        let button = UIButton(type: .custom)
        button.setImage(UIImage(named: exitButtonImage), for: .normal)
        button.accessibilityIdentifier = "ExitButton"
        return button
    }()
    
...
