...
        return progress
    }()
    
    private let webView: WKWebView = {
        
        let webView = WKWebView()
        webView.accessibilityIdentifier = "AuthWebView"
        
        return webView
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
